# Snake2D

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Snake2D/: CMakeLists.txt  Snake2D.cpp  Snake2D.h
Snake2D/src/: SnakeGame.cpp  SnakeGame.hpp
Snake2D/src/Game/Entity/: Board.cpp  Board.hpp  Constants.hpp  Food.cpp  Food.hpp  Level.cpp  Level.hpp  Snake.cpp  Snake.h
Snake2D/src/Game/Enum/: GameDifficulty.hpp
Snake2D/src/Game/State/: EndScreenState.cpp  EndScreenState.hpp  GameMetadata.hpp  GameState.hpp  GameStateContext.cpp  GameStateContext.hpp  InGameState.cpp  InGameState.hpp  MenuState.cpp  MenuState.hpp
assets/shaders/: quad.frag  quad.vert  text.frag  text.vert
engine/: CMakeLists.txt
engine/libs/glad_opengl/: CMakeLists.txt
engine/libs/glad_opengl/include/glad/: glad.h
engine/libs/glad_opengl/src/: glad.c
engine/src/Core/: Input.cpp  Input.h  KeyCodes.hpp  MouseCodes.hpp  ResourceLoader.cpp  ResourceLoader.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp  gApplication.cpp  gApplication.hpp
engine/src/Event/: Event.hpp  KeyEvent.hpp  MouseEvent.hpp  WindowEvent.hpp
engine/src/Graphics/: Batch.hpp  Buffer.cpp  Buffer.hpp  Camera.hpp  Font.cpp  Font.hpp  Image.cpp  Image.hpp  RenderCommand.cpp  RenderCommand.hpp  RendererAPI.cpp  RendererAPI.h  Shader.hpp  Texture.cpp  Texture.hpp
engine/src/Graphics/2D/: OrthoCamera.cpp  OrthoCamera.hpp  Renderer2D.cpp  Renderer2D.hpp
engine/src/Graphics/2D/Batching/: SpriteBatch.cpp  SpriteBatch.hpp  TextBatch.cpp  TextBatch.hpp
engine/src/Graphics/2D/Entity/: Sprite.cpp  Sprite.hpp  Text.cpp  Text.hpp  Transformable2D.hpp
engine/src/Platform/glfw/: glfwWindow.cpp  glfwWindow.hpp
engine/src/Platform/opengl/: glBuffer.cpp  glBuffer.hpp  glRendererAPI.cpp  glRendererAPI.h  glShader.cpp  glShader.h  glTexture.cpp  glTexture.hpp
